# simplex-directory-servers-validator

./: .env  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init_db.sql
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml  validator.yml
admin/: Dockerfile  index.ts  package-lock.json  package.json  settings.ts
smp-client/: Dockerfile
validator/: Cargo.toml  Dockerfile  api.ts  geoip.ts  index.ts  package-lock.json  package.json  settings.ts  uri-parser.ts
validator/src/: adapters.rs  database.rs  geoip.rs  lib.rs  main.rs  smp.rs  uri_parser.rs  validator.rs
validator/src/adapters/: domain_type.rs  geoip.rs  http_checker.rs  servers_checker.rs  servers_repository.rs
validator/src/validator/: app.rs  ports.rs
worker/: Dockerfile  api.ts  database.ts  geoip.ts  index.ts  package-lock.json  package.json  settings.ts  tsconfig.json  uri-parser.ts
yggdrasil/: Dockerfile  entrypoint.sh
