[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.20"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
maxminddb = "0.24.0"
postgrest = "1.6.0"
rand = "0.8.5"
regex = "1.11.0"
reqwest = "0.12.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.128"
supabase = "0.0.0"
tokio = { version = "1.43.1", features = ["full"] }
tungstenite = "0.27.0"
