[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.20"
env_logger = "0.11.5"
itertools = "0.14.0"
log = "0.4.22"
maxminddb = "0.27.1"
postgrest = "1.6.0"
rand = "0.9.1"
regex = "1.12.1"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "charset", "http2", "socks", "blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.128"
supabase = "0.0.0"
tokio = { version = "1.48.0", features = ["full"] }
tungstenite = "0.28.0"

[lints.clippy]
unwrap_used = "deny"
